# JmriWebsocketThrottleDemo

./: README.md  pyproject.toml
automationRwc/: config.py  main.py
automationRwc/jmriConnector/: jmriConnector.py
